--- a/qr.html
+++ b/qr.html
@@ -10,6 +10,10 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <style>
+        body {
+            background-color: #F3F3F9;
+        }
+
         .qr {
             position: absolute;
             width: 500px;
