--- a/qr.html
+++ b/qr.html
@@ -24,7 +24,7 @@
 
         .card {
             /* border: 1px solid #000; */
-            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+            box-shadow: 6px 11px 41px -28px #a99de7;
             border-radius: 10px;
             box-sizing: border-box;
             padding: 1.5rem;
